--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -3,35 +3,32 @@ name: Python application
 on:
   push:
     branches: [main]
+  pull_request:
+    branches: [main]
 
-  pull_request: 
-    brancehs: [main]
+jobs:
+  build:
+    runs-on: ubuntu-latest
 
-  jobs:
-    build:
-      runs-on: ubuntu-latest
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
-      steps: 
-      - name: Checkout repository
-        uses: actions/checkout@v2
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.8'
 
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.8'
-  
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-    
-      - name: Lint with flake8
-        run: |
-          pip install flake8
-          flake8 .
-  
-      - name: Run tests
-        run: |
-          # Add your test commands here, if any
-          echo "No tests defined yet."
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
+    - name: Lint with flake8
+      run: |
+        pip install flake8
+        flake8 .
+
+    - name: Run tests
+      run: |
+        echo "No tests defined yet."
