--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,34 +1,27 @@
-name: Python application
+name: Python Linting and CI
 
-on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+on: [push, pull_request]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+      - uses: actions/checkout@v4
+      
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+      
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install flake8
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.10'
+      - name: Lint with flake8
+        run: |
+          # Ignore line length (E501), you can tune this later
+          flake8 . --exclude=venv.__pycache__ --ignore=E501
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-
-    - name: Lint with flake8
-      run: |
-        pip install flake8
-        flake8 . --max-line-length=120
-
-    - name: Run tests
-      run: |
-        echo "No tests defined yet."
