--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,4 +24,16 @@ jobs:
         run: |
           # Ignore line length (E501), you can tune this later
           flake8 . --exclude=venv.__pycache__ --ignore=E501
+      
+      - name: Run tests with coverge
+        run: |
+          pytest --cov=secondmind --cov-report=xml
+      
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v4
+        with:
+          token:
+          files: coverage.xml
+          fail_ci_if_error: true
+
 
