--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -32,8 +32,6 @@ jobs:
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
         with:
-          token:
+          token: $ {{ secrets.8f9554e2-c462-4271-b04e-191b4dc6fa05 }}
           files: coverage.xml
           fail_ci_if_error: true
-
-
