--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,12 +1,19 @@
-name: Python Linting and CI
+name: Python Linting, CI, run tests and upload coverage
 
 on: [push, pull_request]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
+  test:
+    name: Run tests and collect coverage
+    runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 2
+
       - uses: actions/checkout@v4
       
       - name: Set up Python
@@ -26,12 +33,12 @@ jobs:
           # Ignore line length (E501), you can tune this later
           flake8 . --exclude=venv.__pycache__ --ignore=E501
       
-      - name: Run tests with coverge
+      - name: Run tests with coverage
         run: |
           pytest --cov=secondmind --cov-report=xml
       
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v4
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v5
         with:
           files: coverage.xml
           fail_ci_if_error: true
